--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@zyridian/xyranthian",
   "version": "1.0.0-beta.1",
   "description": "A design system for educational web applicaitons.",
+  "publishConfig": {
+  "access": "public"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
