--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
