fix: update exports

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -15,5 +15,14 @@
       "skipLibCheck": true,
       "noEmit": false
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": [
+        "node_modules",
+        "**/*.stories.tsx",
+        "**/*.stories.ts",
+        "**/*.test.tsx",
+        "**/*.test.ts",
+        "**/*.spec.tsx",
+        "**/*.spec.ts"
+    ]
 }
