feat: add new directives to components for NEXTJS

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -23,6 +23,7 @@
         "**/*.test.tsx",
         "**/*.test.ts",
         "**/*.spec.tsx",
-        "**/*.spec.ts"
+        "**/*.spec.ts",
+        "**/*.css"
     ]
 }
