--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "tsc --project tsconfig.build.json && npm run copy-css",
+    "copy-css": "cpx \"src/foundations/global.css\" dist/foundations",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "storybook dev -p 6006",
@@ -48,6 +49,7 @@
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
     "conventional-changelog-conventionalcommits": "^8.0.0",
+    "cpx": "^1.2.1",
     "playwright": "^1.51.1",
     "semantic-release": "^24.2.3",
     "storybook": "^8.6.12",
