--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zyridian/xyranthian",
-  "version": "1.1.0-beta.17",
+  "version": "1.1.0-beta.16",
   "description": "A design system for educational web applicaitons.",
   "publishConfig": {
     "access": "public"
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --project tsconfig.build.json && npm run copy-css",
-    "copy-css": "cpx \"src/foundations/global.css\" dist/foundations",
+    "copy-css": "cpx \"src/**/*.css\" dist",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "storybook dev -p 6006",
@@ -49,7 +49,7 @@
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
     "conventional-changelog-conventionalcommits": "^8.0.0",
-    "cpx": "^1.2.1",
+    "cpx": "^1.5.0",
     "playwright": "^1.51.1",
     "semantic-release": "^24.2.3",
     "storybook": "^8.6.12",
